# teetseek

./: AGENTS.md  LICENSE  README.md  README.ru.md  main.py  pyproject.toml
docs/: docs.json  introduction.mdx  llms.txt  mint.json  quickstart.mdx  textseek_requirements.md
docs/advanced/: custom-extractors.mdx  typing.mdx
docs/api-reference/: errors.mdx  extract.mdx  results.mdx  textseek.mdx
docs/concepts/: extract-specs.mdx  results.mdx  textseek.mdx
docs/ru/: introduction.mdx  quickstart.mdx
docs/ru/advanced/: custom-extractors.mdx  typing.mdx
docs/ru/api-reference/: errors.mdx  extract.mdx  results.mdx  textseek.mdx
docs/ru/concepts/: extract-specs.mdx  results.mdx  textseek.mdx
docs/ru/usage/: error-handling.mdx  extract-code.mdx  extract-links.mdx  link-by-sample.mdx  regex-search.mdx
docs/superpowers/plans/: 2026-05-31-textseek.md  2026-06-01-ai-docs-improvement.md
docs/superpowers/specs/: 2026-05-31-textseek-design.md  2026-06-01-ai-docs-improvement-design.md
docs/usage/: error-handling.mdx  extract-code.mdx  extract-links.mdx  link-by-sample.mdx  regex-search.mdx
examples/: quickstart.py
tests/: corpus.py  test_base.py  test_errors.py  test_examples.py  test_extractor_code.py  test_extractor_link.py  test_extractor_regex.py  test_integration_corpus.py  test_links.py  test_links_blank_query.py  test_patterns.py  test_public_api.py  test_results.py  test_seek.py  test_smoke.py  test_specs_code.py  test_specs_regex.py
textseek/: __init__.py  errors.py  links.py  patterns.py  results.py  seek.py  specs.py
textseek/extractors/: base.py  code.py  link.py  regex.py
