[project]
name = "textseek"
version = "0.1.0"
description = "Zero-dependency text search and extraction: codes, links, regex"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["textseek"]

[tool.pytest.ini_options]
testpaths = ["tests"]
