[project]
name = "textseek"
version = "0.1.0"
description = "Zero-dependency text search and extraction: codes, links, regex"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "0cherednoq" }]
keywords = [
    "text",
    "extraction",
    "parsing",
    "otp",
    "verification-code",
    "links",
    "regex",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/0cherednoq/teetseek"
Repository = "https://github.com/0cherednoq/teetseek"
Issues = "https://github.com/0cherednoq/teetseek/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["textseek"]

[tool.pytest.ini_options]
testpaths = ["tests"]
